--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -1,6 +1,12 @@
 {
   "name": "api",
   "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT"
+  "type": "module",
+  "main": "index.ts",
+  "license": "MIT",
+  "dependencies": {
+    "@types/express": "^5.0.3",
+    "express": "^5.1.0",
+    "db": "*"
+  }
 }
