--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -1,10 +1,10 @@
 {
   "name": "db",
   "version": "1.0.0",
-  "main": "index.ts",
+  "main": "src/index.ts",
   "type": "module",
   "exports": {
-    "./client": "./src/index.ts"
+    ".": "./src/index.ts"
   },
   "license": "MIT",
   "dependencies": {
