--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -6,7 +6,14 @@
   "license": "MIT",
   "dependencies": {
     "@types/express": "^5.0.3",
+    "@types/jsonwebtoken": "^9.0.10",
+    "cors": "^2.8.5",
+    "db": "*",
     "express": "^5.1.0",
-    "db": "*"
+    "jsonwebtoken": "^9.0.2",
+    "jwt": "^0.2.0"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.19"
   }
 }
