--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -1,14 +1,18 @@
 {
   "name": "db",
+  "module": "index.ts",
   "version": "1.0.0",
   "main": "src/index.ts",
   "type": "module",
   "exports": {
-    ".": "./src/index.ts"
+    "./client": "./src/index.ts"
   },
   "license": "MIT",
   "dependencies": {
     "@prisma/client": "^6.17.1",
     "prisma": "^6.17.1"
+  },
+  "prisma": {
+    "seed": "./prisma/seed.ts"
   }
 }
