--- a/apps/hub/package.json
+++ b/apps/hub/package.json
@@ -2,5 +2,16 @@
   "name": "hub",
   "version": "1.0.0",
   "main": "index.ts",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "@solana/web3.js": "^1.98.4",
+    "bun-types": "^1.3.1",
+    "tweetnacl": "^1.0.3",
+    "tweetnacl-util": "^0.15.1"
+  },
+  "devDependencies": {
+    "@types/bun": "^1.3.0",
+    "common": "*",
+    "db": "*"
+  }
 }
