--- a/apps/validator/package.json
+++ b/apps/validator/package.json
@@ -1,6 +1,20 @@
 {
   "name": "validator",
-  "version": "1.0.0",
-  "main": "index.ts",
-  "license": "MIT"
+  "module": "index.ts",
+  "type": "module",
+  "devDependencies": {
+    "@types/bun": "latest",
+    "common": "*"
+  },
+  "peerDependencies": {
+    "typescript": "^5.0.0"
+  },
+  "dependencies": {
+    "@solana/kit": "^2.1.0",
+    "@solana/web3.js": "^1.98.0",
+    "crypto": "^1.0.1",
+    "dotenv": "^17.2.3",
+    "tweetnacl": "^1.0.3",
+    "tweetnacl-util": "^0.15.1"
+  }
 }
